<resources>
    <string name="app_name">DI Hilt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_1">Number 1</string>
    <string name="enter_number_one">Enter Number 1</string>
    <string name="number_2">Number 2</string>
    <string name="enter_number_2">Enter Number 2</string>
    <string name="login">Add</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="my_profile">Profile</string>
    <string name="add_successfully">Added Successfully</string>
    <string name="add_failed">Added failed</string>
</resources>