<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.dabodiya.dihilt.view.fragment.home.HomeVM" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/_16sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logoImageView"
                style="@style/LogoStyle"
                android:layout_marginBottom="@dimen/_30sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/number1TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:text="@string/number_1"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/number1EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/enter_number_one"
                android:inputType="number"
                android:maxLength="9"
                android:singleLine="true"
                android:text="@={viewModel.no1}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number1TextView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/number2TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/number_2"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number1EditText" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/number2EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/enter_number_2"
                android:inputType="number"
                android:maxLength="9"
                android:singleLine="true"
                android:text="@={viewModel.no2}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number2TextView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/ButtonStyle"
                snackbarMessage="@{viewModel.message}"
                android:layout_marginTop="@dimen/_16ssp"
                android:gravity="center"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number2EditText" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>